# VanillaClocker

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml  format.yml  lint.yml  test.yml
clocking-server/: Cargo.toml
clocking-server/src/: cert.rs  err.rs  main.rs
