[package]
name = "clocking-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive", "env"] }
dotenvy = "0.15.7"
rustls-pemfile = "2.1.3"
thiserror = "1.0.64"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
tracing_spanned = { git = "https://github.com/pulsuite/tracing_spanned", rev = "6fed6097d13d117e4d35120f56450b156c33b77e" }
